Worked on NavBar to display icons depending on authenticated state

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(245, 245, 245);
 }
 .container {
@@ -11,6 +10,9 @@ body {
 }
 .nav-container {
   margin: auto;
+}
+.nav-container svg {
+  color: #fff;
 }
 
 a {
